WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307049
[GTK][WPE] REGRESSION(
302341@main
) - Loading webkit://gpu shows error message in JS console
https://bugs.webkit.org/show_bug.cgi?id=307049
Summary
[GTK][WPE] REGRESSION(302341@main) - Loading webkit://gpu shows error message...
Nikolas Zimmermann
Reported
2026-02-05 01:53:41 PST
I see this error: webkit://gpu:1: CONSOLE JS ERROR SyntaxError: Unexpected keyword 'null'. Expected ')' to end an argument list.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-02-05 01:55:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57944
EWS
Comment 2
2026-02-05 02:30:30 PST
Committed
306849@main
(6f7645c8892e): <
https://commits.webkit.org/306849@main
> Reviewed commits have been landed. Closing PR #57944 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug