[GTK][WPE] REGRESSION(302341@main) - Loading webkit://gpu shows error message in JS console https://bugs.webkit.org/show_bug.cgi?id=307049

Reviewed by Adrian Perez de Castro.

In 302341@main, a typo was introduced leading to:
webkit://gpu:1: CONSOLE JS ERROR SyntaxError: Unexpected keyword 'null'. Expected ')' to end an argument list.

Testable by opening webkit://gpu.

* Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU):

Canonical link: https://commits.webkit.org/306849@main